# generic-annotate

./: LICENSE  README.md  generics-annotate.cabal
Data/Generics/Annotate/: Annotate.lhs
src/Data/Generics/: Annotate.lhs  NewAnnotate.lhs
